crystal-facet-uml (1.50.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagram titles do not touch the diagram elements anymore

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 14 May 2023 11:00:00 +0200

crystal-facet-uml (1.50.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * IDs of classifiers are not shown anymore, names are already unique
  * Stereotype-Images: svg-path use fill and stroke colors to draw
  * in stereotype images, the svg path data may be stated in single-quotes
  * if a stereotype image is drawn, the stereotype name is not drawn

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 13 May 2023 11:00:00 +0200

crystal-facet-uml (1.49.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Stereotype-Images: svg-path draws arcs
  * In case of svg-path errors, line numbers are shown to the user
  * In case the user enters a duplicate name, a similar name is set instead

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 15 Apr 2023 14:00:00 +0200

crystal-facet-uml (1.48.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Test case testParseFloat fixed by using TEST_EXPECT_EQUAL_DOUBLE macro

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 01 Apr 2023 08:00:00 +0200

crystal-facet-uml (1.48.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Classifiers show custom stereotype images made of SVG-path subset:
    Lines and Curves
  * Image classifier defined

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 31 Mar 2023 19:00:00 +0200

crystal-facet-uml (1.47.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * diagrams and relationships have stereotypes
  * stereotype (as classifier) and tagged value (as feature) defined
  * Rare issue fix: XMI-export exports also the non-lifeline features of
    interaction-ownedBehaviors (e.g. port of state in sequence)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 Feb 2023 08:00:00 +0100

crystal-facet-uml (1.46.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]